--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ button {
   margin-right: 20px;
   align-items: center;
 }
+button:hover {
+  background-color: #4a4f57;
+}
 #buttons {
   display: flex;
   justify-content: center;
@@ -36,10 +39,11 @@ h1 {
   display: flex;
   justify-content: center;
   align-content: center;
-  color: rgba(255, 248, 166, 0.767);
+  color: #fffbe6;
+  margin-top: 30px;
 }
 #textish {
-  color: #dac041;
+  color: #fffbe6;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -47,3 +51,7 @@ h1 {
   max-width: 400px;
   padding: 10px;
   margin: 0 auto;
+  font-weight: bold;
+}
+#reset {
+}
